# notify-relay

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
docs/: DEPLOYMENT.md  PERFORMANCE.md  RUNBOOK.md  THREAT_MODEL.md  grafana-dashboard.json
docs/ADR/: 0001-idempotency-storage.md  0002-rate-limit-token-bucket-lua.md  0003-channel-strategy-pattern.md  0004-message-id-ulid.md  0005-structlog-over-python-json-logger.md
src/apps/channels/: apps.py  base.py  email.py  security.py  webhook.py
src/apps/core/: apps.py  authentication.py  health.py  logging.py  metrics.py  middleware.py  security.py  serializers.py  urls.py  views.py
src/apps/core/migrations/: 0001_initial.py
src/apps/core/models/: api_key.py
src/apps/messages_api/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
src/apps/messages_api/migrations/: 0001_initial.py  0002_message_message_queued_partial_idx.py
src/apps/ratelimit/: __init__.py  apps.py  bucket.py
src/apps/ratelimit/lua/: token_bucket.lua
src/apps/templating/: __init__.py  apps.py  models.py  renderer.py  serializers.py  views.py
src/apps/templating/migrations/: 0001_initial.py
src/notify_relay/: asgi.py  celery.py  urls.py  wsgi.py
src/notify_relay/settings/: base.py  dev.py  prod.py  test.py
src/tasks/: delivery.py  scheduler.py
tests/: conftest.py
tests/integration/: test_e2e.py  test_email.py
tests/unit/: test_renderer.py  test_validators_property.py
