[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notify-relay"
version = "0.1.0"
description = "Transactional notification relay service (email + webhook) on Django/DRF and Celery"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GrimVo1d" }]
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "celery>=5.3",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
    "requests>=2.32",
    "structlog>=24.1",
    "Jinja2>=3.1",
    "prometheus-client>=0.20",
    "passlib[argon2]>=1.7",
    "python-ulid>=2.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "isort>=5.13",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-django>=4.8",
    "pytest-celery>=1.0",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "responses>=0.25",
    "fakeredis[lua]>=2.21",
    "hypothesis>=6.100",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.15",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
    migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["notify_relay", "apps", "tasks"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
mypy_path = "src"
exclude = ["migrations/"]

[tool.django-stubs]
django_settings_module = "notify_relay.settings.test"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "notify_relay.settings.test"
python_files = ["test_*.py", "tests.py"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:celery",
    "ignore::DeprecationWarning:passlib",
    "ignore:'crypt' is deprecated:DeprecationWarning",
    "ignore:.*pkg_resources.*:DeprecationWarning",
]
